update index.html example

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
  <div class="code">
   GET /time
  <br>
-  برای مثال : http://api.felfelpardaz.ir/gahshomar/time
+  برای مثال : http://api.felfelpardaz.ir/time
  </div>
  <h3> نتیجه </h3>
  <div class="result">
@@ -34,7 +34,7 @@
  <div class="code">
   GET /date
  <br>
-  برای مثال : http://api.felfelpardaz.ir/gahshomar/date
+  برای مثال : http://api.felfelpardaz.ir/date
  </div>
  <h3> نتیجه </h3>
  <div class="result">
@@ -48,7 +48,7 @@
   <h3>شمسی - تاریخ درخواستی ‌</h3>
  <div class="code">
   GET /date/1395-01-01
- برای مثال : http://api.felfelpardaz.ir/gahshomar/date/1395-01-01
+ برای مثال : http://api.felfelpardaz.ir/date/1395-01-01
  <br>
 
  </div>
@@ -80,7 +80,7 @@ Gregorian (میلادی)
  این نوع جهت تبدیل به میلادی مورد استفاده میگیرد
 
 برای مثال
- http://api.felfelpardaz.ir/gahshomari/to/jalali/2013-08-02
+ http://api.felfelpardaz.ir/to/jalali/2013-08-02
  
 </pre>
  </div>
