--- a/public/index.html
+++ b/public/index.html
@@ -1,76 +1,83 @@
 <!doctype html>
-<html lang = "Fa" dir = "rtl">
-<head>
- <title> api تقویم ایران </title>
+<html lang="Fa" dir="rtl">
 
+<head>
+	<title> api تقویم ایران </title>
+
+
+	<link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css" rel="stylesheet"
+		type="text/css" />
 
 
 </head>
+
 <body>
- <header>
- <h1>  api تقویم ایران </h1>
- <p> به همراه وقایع شمسی </p> 
+	<header>
+		<h1> api تقویم ایران </h1>
+		<p> به همراه وقایع شمسی </p>
 
- </header>
-  <div class = "content">
- <h2> سلام دنیا </h2>
- <p>
- به api تقویم فارسی ایران خوش‌ آمدید این api برای ساده سازی کار برنامه نویسان به وجود آمده است و اصولا در پروژه هایی که نیاز به یک ساعت و تاریخ دقیق از سمت سرور دارند میتواند استفاده شود همچنین این api از یک سیستم نمایش رویداد های شمسی ایران نیاز پشتیبانی میکند :) 
- کد های این پروژه را میتوانید از گیت هاب دانلود کنید 
+	</header>
+	<div class="content">
+		<h2> سلام دنیا </h2>
+		<p>
+			به api تقویم فارسی ایران خوش‌ آمدید این api برای ساده سازی کار برنامه نویسان به وجود آمده است و اصولا در
+			پروژه هایی که نیاز به یک ساعت و تاریخ دقیق از سمت سرور دارند میتواند استفاده شود همچنین این api از یک سیستم
+			نمایش رویداد های شمسی ایران نیاز پشتیبانی میکند :)
+			کد های این پروژه را میتوانید از گیت هاب دانلود کنید
 
- <h2> چطوری کار میکنه ؟‌ </h2> 
- <h3> زمان ‌</h3>
- <div class="code">
-  GET /time
- <br>
-  برای مثال : http://api.felfelpardaz.ir/time
- </div>
- <h3> نتیجه </h3>
- <div class="result">
-  2:55:21 AM
- </div>
+		<h2> چطوری کار میکنه ؟‌ </h2>
+		<h3> زمان ‌</h3>
+		<div class="code">
+			GET /time
+			<br>
+			برای مثال : http://api.felfelpardaz.ir/time
+		</div>
+		<h3> نتیجه </h3>
+		<div class="result">
+			2:55:21 AM
+		</div>
 
-  <h3> تاریخ فعلی ‌</h3>
- <div class="code">
-  GET /date
- <br>
-  برای مثال : http://api.felfelpardaz.ir/date
- </div>
- <h3> نتیجه </h3>
- <div class="result">
-یک json بر میگرداند که حاوی مقادیر زیر است
- <br>
- date : تاریخ فعلی به میلادی <br>
- jdate : تاریخ فعلی به شمسی <br>
- event : رویداد مربوط به امروز <br>
- week : نام روز هفته <br>
- </div>
-  <h3>شمسی - تاریخ درخواستی ‌</h3>
- <div class="code">
-  GET /date/1395-01-01
- برای مثال : http://api.felfelpardaz.ir/date/1395-01-01
- <br>
+		<h3> تاریخ فعلی ‌</h3>
+		<div class="code">
+			GET /date
+			<br>
+			برای مثال : http://api.felfelpardaz.ir/date
+		</div>
+		<h3> نتیجه </h3>
+		<div class="result">
+			یک json بر میگرداند که حاوی مقادیر زیر است
+			<br>
+			date : تاریخ فعلی به میلادی <br>
+			jdate : تاریخ فعلی به شمسی <br>
+			event : رویداد مربوط به امروز <br>
+			week : نام روز هفته <br>
+		</div>
+		<h3>شمسی - تاریخ درخواستی ‌</h3>
+		<div class="code">
+			GET /date/1395-01-01
+			برای مثال : http://api.felfelpardaz.ir/date/1395-01-01
+			<br>
 
- </div>
- <h3> نتیجه </h3>
- <div class="result">
-یک json بر میگرداند که حاوی مقادیر زیر است
- <br>
- date : تاریخ درخواستی به میلادی <br>
- jdate : تاریخ درخواست به شمسی <br>
- event : رویداد مربوط به روز  <br>
- week : نام روز هفته <br>
- </div>
- <h3>
- تبدیل 
- </h3>
- <p> 
-این متد برای تبدیل تاریخ استفاده میشود و دو ارگومان میگیرد
- ارگومان اول نوع تبدیل و آرگومان دوم تاریخ مربوطه
- </p>
- <div class = "code">
-  GET to/[type]/[date]
- <pre>
+		</div>
+		<h3> نتیجه </h3>
+		<div class="result">
+			یک json بر میگرداند که حاوی مقادیر زیر است
+			<br>
+			date : تاریخ درخواستی به میلادی <br>
+			jdate : تاریخ درخواست به شمسی <br>
+			event : رویداد مربوط به روز <br>
+			week : نام روز هفته <br>
+		</div>
+		<h3>
+			تبدیل
+		</h3>
+		<p>
+			این متد برای تبدیل تاریخ استفاده میشود و دو ارگومان میگیرد
+			ارگومان اول نوع تبدیل و آرگومان دوم تاریخ مربوطه
+		</p>
+		<div class="code">
+			GET to/[type]/[date]
+			<pre>
  ارگومان type دو حالت میتواند باشد 
   
 jalali (شمسی)
@@ -83,72 +90,121 @@ Gregorian (میلادی)
  http://api.felfelpardaz.ir/to/jalali/2013-08-02
  
 </pre>
- </div>
- <div class ="result">
- نتایج را مانند متد date بر میگرداند
- <div>
-</div>
+		</div>
+		<div class="result">
+			نتایج را مانند متد date بر میگرداند
+			<div>
+			</div>
 
- </div>
-<br> 
-<br>
- با تشکر از شما جهت استفاده از این api 
-محمد جواد یاحقی
- ایدی تلگرام :‌ @developero
- کانال تلگرام : @mjyahaghi
- <br><br>
+		</div>
+		<br>
+		<br>
+		با تشکر از شما جهت استفاده از این api
+		محمد جواد یاحقی
+		ایدی تلگرام :‌ @developeroc
+		<br><br>
 
 
-<style>
-header {
-	height : 140px; 
-	width : auto;
-	padding-top : 10px;
-	padding-bottom : 5px;
-	background : #674172; 
-	text-align : center;
-	color : #FFFFFF; 
-	border-radius : 14px;
-}
+		<style>
+			
+			body,html{
+				font-family: Vazirmatn, sans-serif;
 
-.content {
-	border-style : solid;
-	margin-top : 10px;
-	width : auto;
-	border-radius : 16px;
-	border-width : 4px;
-	border-color : #913D88;
-	padding-top : 5px;
-	padding-right : 10px;
-}
-.code {
-	background:#D3D3D3;
-	text-align:center; 
-	font-size:14pt; 
-	width:auto;
-	height:50px auto;
-	margin-top:10px;
-	padding-top:15px;
-	border-radius:16px;
-	margin-left:10px;
-	margin-right:10px;
-	margin-bottom:10px;
-}
+			}
+			header {
+				height: 140px;
+				width: auto;
+				padding-top: 10px;
+				padding-bottom: 5px;
+				background: #674172;
+				text-align: center;
+				color: #FFFFFF;
+				border-radius: 14px;
+			}
 
-.result {
-	background:#ADD8E6;
-	text-align:center; 
-	font-size:14pt; 
-	width:auto;
-	height:50px auto;
-	margin-top:10px;
-	padding-top:15px;
-	border-radius:16px;
-	margin-left:10px;
-	margin-right:10px;
-	margin-bottom:10px;
-}
-</style>
- <a href="https://github.com/mrfelfel/taghvim" class="github-corner" aria-label="View source on Github"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+			.content {
+				border-style: solid;
+				margin-top: 10px;
+				width: auto;
+				border-radius: 16px;
+				border-width: 4px;
+				border-color: #913D88;
+				padding-top: 5px;
+				padding-right: 10px;
+			}
+
+			.code {
+				background: #D3D3D3;
+				text-align: center;
+				font-size: 14pt;
+				width: auto;
+				height: 50px auto;
+				margin-top: 10px;
+				padding-top: 15px;
+				border-radius: 16px;
+				margin-left: 10px;
+				margin-right: 10px;
+				margin-bottom: 10px;
+			}
+
+			.result {
+				background: #ADD8E6;
+				text-align: center;
+				font-size: 14pt;
+				width: auto;
+				height: 50px auto;
+				margin-top: 10px;
+				padding-top: 15px;
+				border-radius: 16px;
+				margin-left: 10px;
+				margin-right: 10px;
+				margin-bottom: 10px;
+			}
+		</style>
+		<a href="https://github.com/mrfelfel/taghvim" class="github-corner" aria-label="View source on Github"><svg
+				width="80" height="80" viewBox="0 0 250 250"
+				style="fill:#64CEAA; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true">
+				<path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+				<path
+					d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+					fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
+				<path
+					d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+					fill="currentColor" class="octo-body"></path>
+			</svg></a>
+		<style>
+			.github-corner:hover .octo-arm {
+				animation: octocat-wave 560ms ease-in-out
+			}
+
+			@keyframes octocat-wave {
+
+				0%,
+				100% {
+					transform: rotate(0)
+				}
+
+				20%,
+				60% {
+					transform: rotate(-25deg)
+				}
+
+				40%,
+				80% {
+					transform: rotate(10deg)
+				}
+			}
+
+			@media (max-width:500px) {
+				.github-corner:hover .octo-arm {
+					animation: none
+				}
+
+				.github-corner .octo-arm {
+					animation: octocat-wave 560ms ease-in-out
+				}
+			}
+		</style>
 </body>
+
 </html>
